// This file is auto-generated, DO NOT make any changes here
syntax = "proto3";
package de.rki.coronawarnapp.server.protocols.internal.ppdd;

import "internal/ppdd/ppac_android.proto";
import "internal/ppdd/ppa_data.proto";

message PPADataRequestAndroid {

  PPACAndroid authentication = 1;

  PPADataAndroid payload = 2;
}